fix 404 alignment

--- a/src/react-app/index.css
+++ b/src/react-app/index.css
@@ -54,7 +54,6 @@ h3 {
   min-height: 80vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
